--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,3 +7,20 @@
 *{
     font-family: "Montserrat", sans-serif;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: #040726;
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #04072691; 
+    border-radius: 10px;
+  }
+ 
